Move sections into separate dir

--- a/thesis.tex
+++ b/thesis.tex
@@ -33,21 +33,21 @@
 
 \begin{document}
 
-\input{title}
+\input{sections/title}
 \setcounter{page}{4}
 
-\input{abstracts}
+\input{sections/abstracts}
 \tableofcontents
-\input{abbreviations}
+\input{sections/abbreviations}
 %
-\input{introduction}
-\input{symmetric_ciphers}
-\input{algebraic_analysis}
-\input{implementation}
-\osh{\input{labour}}
-\input{conclusions}
+\input{sections/introduction}
+\input{sections/symmetric_ciphers}
+\input{sections/algebraic_analysis}
+\input{sections/implementation}
+\osh{\input{sections/labour}}
+\input{sections/conclusions}
 
 \bibliography{references}
-\input{appendix}
+\input{sections/appendix}
 
 \end{document}
