--- a/thesis.tex
+++ b/thesis.tex
@@ -1,34 +1,43 @@
-% AUTHOR: Ruslan Kiianchuk <ruslan.kiianchuk@gmail.com>
+\documentclass[online]{dstu3008/dstu3008}
 
-\documentclass{dstu3008/dstu3008}
 % For printing use hardcopy option:
 %\documentclass[hardcopy]{dstu3008/dstu3008}
 
 \usepackage{tikz}
-\usetikzlibrary{arrows,decorations.pathmorphing,backgrounds,positioning,fit,decorations.pathreplacing}
+\usetikzlibrary{
+    arrows,
+    decorations.pathmorphing,
+    backgrounds,
+    positioning,
+    fit,
+    decorations.pathreplacing
+}
 
 % Condition whether Occupational Safety and Health (OSH) chapter is included.
 \newif\ifosh
+
+% To include OSH chapter use \oshtrue 
 \oshfalse
 
-% To include OSH chapter:
-% \oshtrue
 \ifosh
-    \newcommand{\osh}[1]{#1}
+    \newcommand{\osh}{\input{sections/labour.tex}}
 \else
-    \newcommand{\osh}[1]{}
+    \newcommand{\osh}{}
 \fi
 
 \newcommand{\misty}{\mbox{MISTY1}}
 \newcommand{\gost}{\mbox{GOST~28147-89}}
+\newcommand{\thesisAuthor}{Ruslan I. Kiyanchuk}
+\newcommand{\thesisTitle}{Cryptographic properties analysis of perspective symmetric transformations}
 
 \hypersetup{
-    pdfauthor = {Ruslan I. Kiyanchuk},
-    pdftitle = {Algebraic analysis of symmetric block ciphers},
+    pdfauthor = {\thesisAuthor},
+    pdftitle = {\thesisTitle},
  }
 
-\title{Cryptographic properties analysis of perspective symmetric transformations}
-\author{Ruslan I. Kiyanchuk}
+
+\title{\thesisTitle}
+\author{\thesisAuthor}
 
 
 \begin{document}
@@ -39,12 +48,11 @@
 \input{sections/abstracts}
 \tableofcontents
 \input{sections/abbreviations}
-%
 \input{sections/introduction}
 \input{sections/symmetric_ciphers}
 \input{sections/algebraic_analysis}
 \input{sections/implementation}
-\osh{\input{sections/labour}}
+\osh
 \input{sections/conclusions}
 
 \bibliography{references}
