Temporary add binary docs not typeset in LaTeX

--- a/thesis.tex
+++ b/thesis.tex
@@ -17,7 +17,7 @@
 \newif\ifosh
 
 % To include OSH chapter use \oshtrue 
-\oshfalse
+\oshtrue
 
 \ifosh
     \newcommand{\osh}{\input{sections/labour.tex}}
