Add Licensing information

--- a/thesis.tex
+++ b/thesis.tex
@@ -45,6 +45,22 @@
 \input{sections/title}
 \setcounter{page}{4}
 
+\newpage
+% Creative Commons License.
+\begin{center}
+\leavevmode
+\includegraphics[width=1in]{images/cc-by-nc-nd.png}
+\label{fig:cc}
+\end{center}
+\begin{center}
+%insert a link to the licence and its description below
+This thesis is licensed under a \\
+\href{http://creativecommons.org/licenses/by-nc-nd/3.0/}
+{Creative Commons Attribution-Non~Commercial-No~Derivatives 4.0 International License.}
+\end{center}
+\newpage
+
+
 \input{sections/abstracts}
 \tableofcontents
 \input{sections/abbreviations}
