--- a/presentation/beamerthemezslides.sty
+++ b/presentation/beamerthemezslides.sty
@@ -1,5 +1,5 @@
-\RequirePackage[T2A]{fontenc}
-\RequirePackage[utf8]{inputenc}
+\RequirePackage{fontspec}
+\setmainfont{CMU Serif}
 
 \RequirePackage[english, russian, ukrainian]{babel}
 \addto\captionsukrainian{\renewcommand{\abstractname}{\MakeUppercase{Реферат}}}
