Remove `online` compiling version
Just have all links clickable but black, just like in printed version.

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[online]{dstu3008/dstu3008}
+\documentclass{dstu3008/dstu3008}
 
 % For printing use hardcopy option:
 %\documentclass[hardcopy]{dstu3008/dstu3008}
