--- a/sections/abstracts.tex
+++ b/sections/abstracts.tex
@@ -2,17 +2,16 @@
 
 \selectlanguage{ukrainian}
 \begin{abstract}
-
-    Магістерська робота містить \pageref{LastPage}~сторінок, \totfig~рисунків,
-    \tottab~таблиці, \totapp~додатків та \totref~джерело.
+    Магістерська робота містить \pageref{LastPage}~сторінок, \totfig~рисунок,
+    \tottab~таблиць, \totapp~додатків та \totref~джерел.
 
     У роботі представлено аналіз перспективних симетричних шифрів, що є
     стандартами на державному та міжнародному рівні.
 
     Розроблено методи побудови системи нелінійних рівнянь низького степеня від
     багатьох невідомих, що описують криптоалгоритми \misty\ та
-    ГОСТ~28147-89. Представлено характеристики алгебраїчної системи 
-    рівнянь кожного шифру та їх порівняння з аналогічними системами рівнянь 
+    ГОСТ~28147-89. Представлено характеристики алгебраїчної системи
+    рівнянь кожного шифру та їх порівняння з аналогічними системами рівнянь
     для криптоалгоритмів AES, Camellia та PRESENT.
 
     Оцінено криптографічну стійкість шифрів \mbox{ГОСТ~28147-89} та \misty\ до
@@ -24,34 +23,9 @@
 \end{abstract}
 
 \clearpage
-\selectlanguage{russian}
-\begin{abstract}
-
-    Магистерская работа содержит \pageref{LastPage}~страниц, \totfig~рисунков,
-    \tottab~таблицы, \totapp~приложений и \totref~источник.
-
-    В работе представлено анализ перспективных симетричных шифров, которые
-    являются стандартами на государственном и международном уровне.
-
-    Разработано методы построение системы нелинейных уравнений низкой степени от
-    многих переменных, которые описывают криптографические алгоритмы \misty\ и 
-    ГОСТ~28147-89. Представлено характеристики алгебраической системы уравений
-    каждого шифра и их сравнение с аналогичными системами уравнений для
-    криптоалгоритмов AES, Camellia, PRESENT.
-
-    Оценено криптографическую стойкость алгоритмов \mbox{ГОСТ~28147-89} и \misty\ к
-    алгебраическому криптоанализу. Выполнено алгебраическую атаку на уменьшенные
-    версии криптоалгоритмов, используя методы SAT-solver для решения системы
-    нелинейных уравнений и восстановления ключа шифрования.
-
-    \keywords{Симметричные шифры, \misty, ГОСТ~28147-89, \\ алгебраический криптоанализ}
-\end{abstract}
-
-\clearpage
 \selectlanguage{english}
 \begin{abstract}
-
-    This thesis contains \pageref{LastPage}~pages, \totfig~figures, 
+    This thesis contains \pageref{LastPage}~pages, \totfig~figures,
     \tottab~tables, \totapp~appendices and \totref~references.
 
     The work presents analysis of symmetric block ciphers that are adopted
