--- a/sections/title.tex
+++ b/sections/title.tex
@@ -4,9 +4,9 @@
 \thispagestyle{empty}
 \begin{center}
     Міністерство освіти і науки України \\[1ex]
-    Харківський національний університет радіоелектроніки \\[1ex] 
-    Факультет Комп'ютерної інженерії та управління \\[1ex] 
-    Кафедра Безпеки інформаційних технологій \\[2ex] 
+    Харківський національний університет радіоелектроніки \\[1ex]
+    Факультет Комп'ютерної інженерії та управління \\[1ex]
+    Кафедра Безпеки інформаційних технологій \\[2ex]
     \MakeUppercase{Магістерська робота} \\[4ex]
     \MakeUppercase{Пояснювальна записка} \\[1ex]
 
@@ -18,12 +18,12 @@
     \line(1, 0){450} \\[-2ex]
     {\scriptsize (тема роботи)} \\[2ex]
 
-    \begin{tabular}{ 
+    \begin{tabular}{
         p{0.13\textwidth}
-        >{\centering\arraybackslash}p{0.2\textwidth} 
-        >{\centering\arraybackslash}p{0.005\textwidth} 
+        >{\centering\arraybackslash}p{0.2\textwidth}
+        >{\centering\arraybackslash}p{0.005\textwidth}
         >{\centering\arraybackslash}p{0.1\textwidth}
-        >{\centering\arraybackslash}p{0.005\textwidth} 
+        >{\centering\arraybackslash}p{0.005\textwidth}
         >{\centering\arraybackslash}p{0.30\textwidth}}
         Студент & БІКСм-12-1 & & & & Кіянчук~Р.~І. \\ \cline{2-2}\cline{4-4}\cline{6-6} \\[-4ex]
         & {\scriptsize (група)} & & {\scriptsize (підпис)} & & {\scriptsize (прізвище, ініціали)} \\[1ex]
@@ -40,15 +40,15 @@
         \begin{flushleft}
             \hspace{4ex}Допускається до захисту \\[1ex]
         \end{flushleft}
-        \begin{tabular}{ 
+        \begin{tabular}{
             p{0.2\textwidth}
-            >{\centering\arraybackslash}p{0.15\textwidth} 
-            >{\centering\arraybackslash}p{0.005\textwidth} 
+            >{\centering\arraybackslash}p{0.15\textwidth}
+            >{\centering\arraybackslash}p{0.005\textwidth}
             >{\centering\arraybackslash}p{0.1\textwidth}
-            >{\centering\arraybackslash}p{0.005\textwidth} 
+            >{\centering\arraybackslash}p{0.005\textwidth}
             >{\centering\arraybackslash}p{0.3\textwidth}}
-            Зав. кафедрою & БІТ & & & & проф. Горбенко~І.~Д. \\ \cline{2-2}\cline{4-4}\cline{6-6} \\[-4ex]
-                                     & & & {\scriptsize (підпис)} & & {\scriptsize (прізвище, ініціали)} \\[1ex]
+            \mbox{Зав. кафедрою} & БІТ & & & & проф. Горбенко~І.~Д. \\ \cline{2-2}\cline{4-4}\cline{6-6} \\[-4ex]
+                                       & & & {\scriptsize (підпис)} & & {\scriptsize (прізвище, ініціали)} \\[1ex]
         \end{tabular}
         \vfill
         2013~р.
